added jitter
