# src/main/java/com/yachmennikov/cache_presentation/entity/Coupon.java
@@ -1,0 +1,29 @@
+package com.yachmennikov.cache_presentation.entity;
+
+import jakarta.persistence.*;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.io.Serializable;
+import java.math.BigDecimal;
+
+@Entity
+@Table(name = "coupons")
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class Coupon implements Serializable {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @Column(nullable = false, unique = true)
+    private String code;
+
+    @Column(nullable = false)
+    private BigDecimal discount;
+}
